--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ p a {
 .body {
 	text-align: center;
 	display: block;
-	margin-top: 10%;
+	margin-top: 1%;
 }
 
 
@@ -96,5 +96,68 @@ p.updates {
 	color: white;
 	padding: .75em;
 	font: 11px "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+}
+
+
+
+
+
+
+/* BLOCKS */
+
+#blocks {
+	margin-top: 1em;
+	clear: both;
+}
+
+#blocks p {
+	color: #515151;
+	font-size: .95rem;
+}
+
+#blocks a {
+	color: green;
+	border-bottom: 1px dotted green;
+}
+
+
+/* BLOCKS - Newsletter */
+
+.block {
+	width: 30%;
+	margin: 2em auto 1em;
+	border: 1px solid green;
+	padding: 1em;
+	background-color: rgba(255, 255, 255, 0.5);
+}
+
+
+.block h2 {
+	color: green;
+  font: normal .85rem "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+
+}
+
+#newsletter {
+	padding-bottom: 0;
+}
+
+h4.block-title {
+	color: green;
+	font: bold 1.25rem "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+	margin: 0;
+	padding-left: .5em;
+	text-align: center;
+}
+
+
+#community h4 {
+	text-align: center;
+}
+
+#community p {
+	padding-right: 1.5em;
+	padding-left: 1.5em;
+	text-align: center;
 }
 
