--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,8 @@ p a {
 	text-align: center;
 	display: block;
 	margin-top: 1%;
+	padding-right: 1em;
+	padding-left: 1em;
 }
 
 
@@ -40,7 +42,9 @@ p.date {
   color: white;
   font-weight: 100;
  	font-size: 2em;
-	margin: 1em 0 .5em;
+	margin-top: 1em;
+	margin-bottom: .5em;
+	margin-left: 0;
 	padding: 0;
 }
 
@@ -60,9 +64,15 @@ p.updates {
 	padding: 0;
 }
 
+div.logo {
+	text-align: center;
+	width: 400px;
+	margin-right: auto;
+	margin-left: auto;
+} 
  
 #logo {
-	width: 260px;
+	width: 100%;
 	height: auto;
 	margin: 0 auto;
 	padding: 1em;
@@ -124,7 +134,7 @@ p.updates {
 /* BLOCKS - Newsletter */
 
 .block {
-	width: 30%;
+	width: 400px;
 	margin: 2em auto 1em;
 	border: 1px solid green;
 	padding: 1em;
