--- a/css/styles.css
+++ b/css/styles.css
@@ -81,11 +81,11 @@ div.logo {
 
 
 .header {
-	width: 100%;
 	text-align: center;
 	font-family: "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 	font-weight: 300;
 	padding: 1em;
+	float: right;
 }
 
 
