--- a/css/styles.css
+++ b/css/styles.css
@@ -132,6 +132,13 @@ div.logo {
 }
 
 
+h4,
+h4 a {
+	color: #FFF;
+  font: bold 1.25rem "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+
+}
+
 /* BLOCKS - Newsletter */
 
 .block {
